default dir: /tmp

--- a/conf/nginx-app.conf
+++ b/conf/nginx-app.conf
@@ -3,7 +3,7 @@
 server {
     listen       10085;
     server_name  localhost;
-    root /root/resthub-console/f2e/vue-element-admin/dist/static;
+    root /tmp;
 
     location = /robots.txt {
         return 200 'User-agent: *\nDisallow: /';
