--- a/conf/nginx-app.conf
+++ b/conf/nginx-app.conf
@@ -3,7 +3,8 @@
 server {
     listen       10085;
     server_name  localhost;
-    root /tmp;
+    root /root/resthub-console/f2e/vue-element-admin/dist;
+    index  index.html;
 
     location = /robots.txt {
         return 200 'User-agent: *\nDisallow: /';
